<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Resumo de Serviço</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string-array name="sections">
        <item>Lista de relatórios</item>
        <item>Totais por perfil</item>
    </string-array>

    <string name="name">Nome</string>
    <string name="profile">Perfil</string>
    <string name="hours">Horas</string>
    <string name="placements">Colocações</string>
    <string name="video_showing">Vídeos mostrados</string>
    <string name="return_visits">Revisitas</string>
    <string name="studies">Estudos</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="clear">Limpar lista</string>
    <string name="reportSaved">Relatório guardado.</string>
    <string name="delete_all">Exclui todos os relatórios?</string>
    <string name="confirm">Confirmação</string>
    <string name="delete_one">Exclui relatório?</string>
    <string name="share">Compartilhar</string>
    <string name="save_error">Não foi gravar o relatório. Os dados estão preechidos?</string>
    <string name="sum">Somatório</string>
    <string name="individual_report">Relatório individual</string>

    <string-array name="profile_list">
        <item>Publicador</item>
        <item>Pioneiro auxiliar</item>
        <item>Pioneiro regular</item>
        <item>Pioneiro especial</item>
    </string-array>
    <string-array name="profile_abbreviation">
        <item>PU</item>
        <item>PA</item>
        <item>PR</item>
        <item>PE</item>
    </string-array>

    <string name="publisher">Publicadores</string>
    <string name="auxiliary_pioneer">Pioneiros Auxiliares</string>
    <string name="regular_pioneer">Pioneiros Regulares</string>
    <string name="special_pioneer">Pioneiros Especiais</string>
    <string name="dash_separator">" - "</string>
    <string name="title_activity_bluetooth_activiy">BluetoothActiviy</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_report">Adicionar relatório</string>
    <string name="receive">Receber relatórios</string>
    <string name="title_paired_devices">Dispositivos pareados</string>
    <string name="title_other_devices">Outros dispositivos</string>
    <string name="button_scan">Procurar</string>
    <string name="none_paired">Nenhum dispositivo pareado</string>
    <string name="scanning">Procurando</string>
    <string name="select_device">Selecione dispositivo</string>
    <string name="none_found">Nenhum encontrado</string>
    <string name="beVisible">Ficar visível</string>
    <string name="bluetooth_is_not_available">Bluetooth não está disponível</string>
    <string name="bt_not_enabled_leaving">Bluetooth não foi habilitado</string>

</resources>