<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuSum"
        android:icon="@drawable/ic_playlist_add_white_24dp"
        android:showAsAction="ifRoom"
        android:title="@string/sum">
    </item>
    
    <item
        android:id="@+id/menuItemClear"
        android:icon="@drawable/ic_delete_sweep_white_24dp"
        android:showAsAction="ifRoom"
        android:title="@string/clear">
    </item>
    
    <!-- 
    <item
        android:id="@+id/menuVisible"
        android:icon="@drawable/ic_remove_red_eye_white_24dp"
        android:showAsAction="ifRoom"
        android:title="@string/beVisible">
    </item>
     -->

    <item
        android:id="@+id/menuReceive"
        android:icon="@drawable/ic_get_app_white_24dp"
        android:showAsAction="ifRoom"
        android:title="@string/receive">
    </item>

    <item
        android:id="@+id/menuUpload"
        android:icon="@drawable/ic_file_upload_white_24dp"
        android:showAsAction="always"
        android:title="@string/share">
    </item>

</menu>