<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:text="Moésio Medeiros" >
        </EditText>

        <EditText
            android:id="@+id/editHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hours"
            android:inputType="numberDecimal"
            android:text="12" />

        <EditText
            android:id="@+id/editPlacements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/placements"
            android:inputType="numberDecimal"
            android:text="15" />

        <EditText
            android:id="@+id/editVideoShowing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="32"
            android:hint="@string/video_showing"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editReturnVisit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="32"
            android:hint="@string/return_visits"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editStudies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="88"
            android:hint="@string/studies"
            android:inputType="numberDecimal" />
    </LinearLayout>

</ScrollView>